--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db": "cloudflared access tcp --hostname mongodb.csbihub.id --url 10.25.143.17:27017",
     "server": "nodemon -x \"ts-node --project ../tsconfig.node.json\" server.ts",
-    "start": "concurrently \"npm run db\" \"npm run server\" "
+    "start": " \"npm run server\" "
   },
   "repository": {
     "type": "git",
