--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -11,6 +11,9 @@ RUN npm install
 # Copy application files
 COPY . .
 
+RUN echo "Contents of /app:" && ls -la /app && \
+    echo "Contents of /app/server (if exists):" && ls -la /app/server || echo "/app/server not found"
+
 # Expose the application port (replace it with the server_port you received)
 EXPOSE 3020
 
