--- a/server/tsconfig.node.json
+++ b/server/tsconfig.node.json
@@ -1,17 +1,14 @@
 {
   "compilerOptions": {
-    "composite": true,
-    "skipLibCheck": true,
+    "target": "ES2020",
     "module": "CommonJS",
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
     "strict": true,
-    "target": "ES2020",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "skipLibCheck": true,
+    "noEmit": true
   },
-  "include": ["./**/*"]
-} 
+  "include": ["server", "routes", "controllers", "models", "config", "utils"]
+}
