--- a/server/tsconfig.node.json
+++ b/server/tsconfig.node.json
@@ -1,14 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "moduleResolution": "node",
-    "strict": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
+    "composite": true,
     "skipLibCheck": true,
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "target": "ESNext",
+    "lib": ["ESNext"],
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["server", "routes", "controllers", "models", "config", "utils"]
+  "include": ["server/server.ts", "server/**/*.ts"],
+  "exclude": ["node_modules"]
 }
