--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Server for the application",
-  "main": "server/index.js",
+  "main": "server/server.ts",
   "scripts": {
-    "start": "node server/index.js",
-    "dev": "nodemon server/index.js"
+    "start": "node server/server.ts",
+    "dev": "nodemon server/server.ts"
   },
   "dependencies": {
     "mongoose": "^8.15.1"
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97",
-    "nodemon": "^3.0.0"
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
