--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.ts",
   "scripts": {
     "start": "ts-node --transpile-only server/server.ts",
-    "dev": "nodemon server/server.ts"
+    "dev": "nodemon --exec \"ts-node --transpile-only server/server.ts\""
   },
   "dependencies": {
     "mongoose": "^8.15.1"
