--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,11 @@
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.9.0",
     "framer-motion": "^11.0.3",
+    "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "tailwindcss": "^3.4.1",
-    "recharts": "^2.12.0",
-    "lucide-react": "^0.344.0"
+    "recharts": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
@@ -28,6 +27,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.0.0",
     "vite": "^6.3.5"
   },
