--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "db": "cloudflared access tcp --hostname mongodb.csbihub.id --url localhost:27018",
     "server": "nodemon -x \"ts-node --project ../tsconfig.node.json\" server.ts",
-    "start": "concurrently \"npm run db\" \"npm run server\" "
+    "start": "npm run server"
   },
   "repository": {
     "type": "git",
