--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongoose": "^8.15.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.2",
     "@types/mongoose": "^5.11.97",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
