--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "Server for the application",
   "main": "server/server.ts",
   "scripts": {
-    "start": "node server/server.ts",
-    "dev": "nodemon server/server.ts"
+    "start": "ts-node --project ./tsconfig.node.json server/server.ts",
+    "dev": "nodemon --exec \"ts-node --project ./tsconfig.node.json\" server/server.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "mongoose": "^8.15.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.2",
     "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.11.24",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
