--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "wads-fp-fark.net",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "db": "cloudflared access tcp --hostname mongodb.csbihub.id --url localhost:27018",
