--- a/server/package.json
+++ b/server/package.json
@@ -7,20 +7,20 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "db": "cloudflared access tcp --hostname mongodb.csbihub.id --url localhost:27018",
     "server": "nodemon --exec \"ts-node --project ./tsconfig.node.json\" server.ts",
-    "start": "npm start"
+    "start": "npm run server"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Frahyang/WADS-FP-FARK.net.git"
+    "url": "git+https://github.com/Frahyang/WADS-FARK-1.net.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "bugs": {
-    "url": "https://github.com/Frahyang/WADS-FP-FARK.net/issues"
+    "url": "https://github.com/Frahyang/WADS-FARK-1/issues"
   },
-  "homepage": "https://github.com/Frahyang/WADS-FP-FARK.net#readme",
+  "homepage": "https://github.com/Frahyang/WADS-FARK-1.net#readme",
   "dependencies": {
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
