--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "db": "cloudflared access tcp --hostname mongodb.csbihub.id --url localhost:27018",
-    "server": "nodemon --exec \"ts-node --project ./tsconfig.node.json\" server.ts",
+    "server": "nodemon --node-args='--trace-warnings' --exec \"ts-node --project ./tsconfig.node.json\" server.ts",
     "start": "npm run server"
   },
   "repository": {
