--- a/server/tsconfig.node.json
+++ b/server/tsconfig.node.json
@@ -2,12 +2,12 @@
   "compilerOptions": {
     "composite": true,
     "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "target": "ESNext",
-    "lib": ["ESNext"],
+    "target": "ES2020",
+    "lib": ["ES2020"],
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
