--- a/server/tsconfig.node.json
+++ b/server/tsconfig.node.json
@@ -2,12 +2,12 @@
   "compilerOptions": {
     "composite": true,
     "skipLibCheck": true,
-    "module": "CommonJS",
+    "module": "ESNEXT",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "target": "ES2020",
-    "lib": ["ES2020"],
+    "target": "ESNEXT",
+    "lib": ["ESNEXT"],
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
