--- a/server/tsconfig.node.json
+++ b/server/tsconfig.node.json
@@ -1,18 +1,18 @@
 {
   "compilerOptions": {
-    "composite": true,
-    "skipLibCheck": true,
-    "module": "ESNEXT",
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "target": "ESNEXT",
-    "lib": ["ESNEXT"],
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "target": "ES2022",
+    "lib": ["ES2022"],
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "noEmit": true,
+    "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
-    "noEmit": true
+    "composite": true
   },
   "include": ["server.ts", "**/*.ts"],
   "exclude": ["node_modules"]
-} 
+}
