--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "db": "cloudflared access tcp --hostname mongodb.csbihub.id --url localhost:27018",
-    "server": "nodemon --exec \"ts-node --project ./tsconfig.node.json\" server.ts",
-    "start": "npm start"
+    "server": "nodemon --exec \"ts-node --project ./tsconfig.json\" server.ts",
+    "start": "npm run server"
   },
   "repository": {
     "type": "git",
