--- a/client/client_nginx.conf
+++ b/client/client_nginx.conf
@@ -27,7 +27,7 @@ server {
         add_header 'Access-Control-Max-Age' 1728000;
         add_header 'Content-Type' 'text/plain charset=UTF-8';
         add_header 'Content-Length' 0;
-        return 204
+        return 204;
     }
 
     proxy_set_header Host $host;
