--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^8.15.1",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
+    "path-to-regexp": "^8.2.0",
     "react-router-dom": "^7.6.1",
     "uuid": "^11.1.0"
   },
