--- a/server/package.json
+++ b/server/package.json
@@ -36,7 +36,10 @@
     "nodemon": "^3.1.10",
     "path-to-regexp": "^8.2.0",
     "react-router-dom": "^7.6.1",
-    "uuid": "^11.1.0"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -45,6 +48,9 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.27",
     "@types/nodemailer": "^6.4.17",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/yamljs": "^0.2.34",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
