--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.9.0",
     "framer-motion": "^11.0.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
